@@ -143,6 +143,10 @@ Restart.
 There's also a
 .Pa blob.db
 file which is important to backup and restore.
+.Pp
+The current version of the honk binary may be printed with the
+.Ic version
+command.
 .Ss SECURITY
 .Nm
 is not currently hardened against SSRF, server side request forgery.
