@@ -2,5 +2,6 @@
 <main>
 <div class="info">
 {{ .AboutMsg }}
+<p style="text-align:right"><small>version: {{ .HonkVersion }}</small>
 </div>
 </main>
